# arckit-test-project-v3-windows11

./: CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  TEST-PLAN.md  portfolio-master-plan.md  pyproject.toml
.arckit/memory/: architecture-principles.md
.arckit/templates/: backlog-template.md
.gemini/: README.md
docs/: TOKEN-LIMITS.md  health.json  index.html  manifest.json
projects/001-windows-11-migration-intune/: ARC-001-BLOG-v1.0.md  ARC-001-DATA-v1.0.md  ARC-001-SNOW-v1.0.md  ARC-001-STORY-v1.0.md  ARC-001-TRAC-v1.0.md  PROJECT-STORY.md  README.md  dpia.md  evaluation-criteria.md  frontend-application-plan.md  frontend-requirements.md  hld.md  migration-database-data-model.md  mod-secure-by-design.md  principles-compliance-assessment-2026-01-21.md  project-plan-detailed.md  project-plan.md  requirements.md  research-findings.md  risk-register.md  roadmap.md  servicenow-data-model.md  sobc.md  sow-frontend.md  sow.md  stakeholder-drivers.md  traceability-matrix.md
projects/002-application-packaging-rationalisation/: ARC-002-DATA-v1.0.md  ARC-002-RISK-v1.0.md  ARC-002-RSCH-v1.0.md  ARC-002-SOBC-v1.0.md  ARC-002-TRAC-v1.1.md  README.md  requirements.md  research-findings-automation-platforms.md
projects/003-peripherals-update-upgrade/: ARC-003-RISK-v1.0.md  ARC-003-SOBC-v1.0.md  ARC-003-SOW-v1.0.md  ARC-003-STKE-v1.0.md  README.md  requirements.md  research-findings-dell.md  risk-register.md  stakeholder-drivers.md  traceability-matrix.md
projects/004-conference-facilities-modernization/: ARC-004-SOBC-v1.0.md  README.md  backlog.md  (+3 more)
scripts/: README.md
(+86 files in other folders)
